<resources>
    <string name="app_name">AIMI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="bad_network_msg">网络较差，请稍后再尝试。</string>
    <string name="revoke_message_by_user">此条消息已被 %1$s 撤回</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="revoke_message_by_self">此消息已撤回</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete_message">删除消息</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="delete">删除</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="recording_video">录制视频</string>
    <string name="temporary_does_not">暂不支持大于10M的视频！</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="to_apply">正在提交申请...</string>
    <string name="upload_img">正在上传图片...</string>
    <string name="are_empty_group_of_news">正在清空群消息...</string>
    <string name="Dissolve_group_chat_tofail">解散群聊失败:</string>
    <string name="Exit_the_group_chat_failure">退出群聊失败:</string>
    <string name="not_delete_myself">不能删除自己</string>
    <string name="Are_removed">正在移除...</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="confirm_the_members">确认将此成员加入至此群黑名单?</string>
    <string name="gift_msg">购买和兑换礼物均能获得积分</string>
    <string name="ok">确定</string>
    <string name="sure_re_message">重发</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="prompt">提示</string>
    <string name="re_message">重发这则消息？</string>
    <string name="folder_all">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">启动摄像头失败</string>
    <string name="msg_amount_limit">超出最大限制</string>
    <string name="select_mode">选择模式</string>
    <string name="mode_single">单选</string>
    <string name="mode_multi">多选</string>
    <string name="max_select_amount">最大选择数量</string>
    <string name="hint_default_amount">默认数量为9</string>
    <string name="enable_camera">是否启用照相机</string>
    <string name="enable">是</string>
    <string name="disable">否</string>
    <string name="go_select">图片选择</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="attach_file">文件</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="voice">声音</string>
    <string name="video">视频</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="newchat">新建聊天</string>
    <string name="search_header">搜</string>
    <string name="search_new">搜</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="resend">重发</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="no_more_messages">没有更多的消息了</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Have_downloaded">已下载</string>
    <string name="Did_not_download">未下载</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">进入主界面!</string>
    <string name="more_share">分享好友</string>
    <string name="tab_coupon_list_text">优惠券列表</string>
    <string name="tab_coupon_message_text">优惠信息</string>
    <string name="tab_index_text">首页</string>
    <string name="tab_config_issue_text">本期配置</string>
    <string name="tab_buy_bag_text">购物袋</string>
    <string name="tab_free_text">免费试用</string>
    <string name="tab_order_check_out_text">订单结算</string>
    <string name="tab_order_shoppinglist_text">商品清单</string>
    <string name="tab_order_pay_type_text">支付配送</string>
    <string name="tab_order_invoice_text">发票信息</string>
    <string name="tab_address_choose_text">地址选择</string>
    <string name="tab_my_text">我的阿甘</string>
    <string name="tab_login_text">验证手机</string>
    <string name="tab_giftcard_text">礼品卡兑换</string>
    <string name="tab_pwdlogin_text">账号登录</string>
    <string name="tab_regist_text">账号注册</string>
    <string name="crop__done">DONE</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="join_buy_shoping">加入购物袋</string>
    <string name="pulldown_header_loading">载入中&#8230;</string>
    <string name="pulldown_footer_loading">加载中&#8230;</string>
    <string name="pulldown_refresh">下拉可以刷新</string>
    <string name="pulldown_release">松开立即刷新</string>
    <string name="pulldown_newest_update">上次刷新时间：</string>
    <string name="pulldown_more">点击查看更多</string>
    <string name="pulldown_load_finish">加载已完成</string>
    <string name="reversalPulldown_header_loading">加载中&#8230;</string>
    <string name="reversalPulldown_footer_loading">载入中&#8230;</string>
    <string name="reversalPulldown_refresh">下拉可以加载更多</string>
    <string name="reversalPulldown_release">松开立即加载更多</string>
    <string name="reversalPulldown_last_update">上次加载</string>
    <string name="reversalPulldown_newest_update">上次加载时间：</string>
    <string name="reversalPulldown_more">点击刷新</string>
    <string name="reversalPulldown_load_finish">加载已完成</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="loading">正在上传&#8230;</string>
    <string name="loadle">请求数据</string>
    <string name="filter_loading">正在渲染图片&#8230;</string>
    <string name="loading_fail">加载失败</string>
    <string name="logining">正在登录&#8230;</string>
    <string name="upload">正在加载。。。</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="send_code">正在发送验证码</string>
    <string name="send_fail">发送失败</string>
    <string name="submit_order"></string>
    <string name="submit_fail">提交失败</string>
    <string name="check_order">正在进行结算</string>
    <string name="check_fail">结算失败</string>
    <string name="regist_loading">请稍等</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="altering">正在修改&#8230;</string>
    <string name="alter_fail">修改失败</string>
    <string name="alter_success">修改成功</string>
    <string name="sure_cancle_invoice">删除发票抬头将不可恢复</string>
    <string name="sure_cancle_buybug">您确定删除此商品吗？</string>
    <string name="sure_cancle_order">取消的订单将不可恢复</string>
    <string name="network_title">网络错误</string>
    <string name="network_content">当前网络连接错误</string>
    <string name="network_setting_wifi">设置Wifi</string>
    <string name="network_setting_gprs">设置Gprs</string>
    <string name="network_no_setting">当前网络不给力</string>
    <string name="prompt_title">提示</string>
    <string name="sure_exit_login">是否确定退出登录?</string>
    <string name="sure_exit_client">是否确定退出客户端?</string>
    <string name="pitcure_des">图片</string>
    <string name="tab_help_text">帮助中心</string>
    <string name="tab_contact_text">联系我们</string>
    <string name="tab_mytry_text">我的试用</string>
    <string name="tab_manage_text">账户管理</string>
    <string name="tab_allorder_text">全部订单</string>
    <string name="tab_order_detail_text">订单详情</string>
    <string name="tab_mealorder_text">套餐订单</string>
    <string name="phone_error">请输入手机号</string>
    <string name="revier_name">修改昵称</string>
    <string name="choose_sex">请选择性别</string>
    <string name="birthday">填写生日</string>
    <string name="address_manage">地址管理</string>
    <string name="findpassword">找回密码</string>
    <string name="new_address">添加地址</string>
    <string name="pause_order">暂停订单</string>
    <string name="reive_password">找回密码</string>
    <string name="edit_address">编辑地址</string>
    <string name="activity_remote_service_binding">AppDemo4</string>
    <string name="remote_call_failed">发生网络错误</string>
    <string name="partnerHint">"partner"</string>
    <string name="sellerHint">"seller"</string>
    <string name="out_trade_noHint">"out_trade_no"</string>
    <string name="subjectHint">"subject"</string>
    <string name="bodyHint">"body"</string>
    <string name="total_feeHint">"total_fee"</string>
    <string name="notify_urlHint">"notify_url"</string>
    <string name="charsetHint">"charset"</string>
    <string name="signTypeHint">"signType"</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全, 需要您安装支付宝安全支付服务, 才能进行付款。\n\n点击确定, 立即安装。"</string>
    <string name="Ensure">"确定"</string>
    <string name="Cancel">"取消"</string>
    <string name="update_title">检查更新</string>
    <string name="check_new_version">正在检查版本&#8230;</string>
    <string name="already_newest">当前版本已经是最新版本</string>
    <string name="check_network">检查更新发生错误,请检查网络</string>
    <string name="check_error">检查更新发生错误,请稍后重试</string>
    <string name="update_content">检测到可用更新,是否现在更新?</string>
    <string name="update_now">立即更新</string>
    <string name="order_pasdate">恢复订单</string>
    <string name="app_tip">提示</string>
    <string name="pay_result">微信支付结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="token_succ">获取access token成功</string>
    <string name="take_prid">获取prid成功</string>
    <string name="login">登录</string>
    <string name="account">账号：</string>
    <string name="password">密码：</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="nowregister">立即注册</string>
    <string name="data_title">完善资料</string>
    <string name="join">进入</string>
    <string name="ed_nickname">请输入昵称</string>
    <string name="ed_birth">请选择生日</string>
    <string name="ed_sex">请选择性别</string>
    <string name="self">账号与安全</string>
    <string name="aboutme">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="clearcache">清除缓存</string>
    <string name="privacy">隐私</string>
    <string name="exit">退出登录</string>
</resources>